3.5.0/_sources/gallery/subplots_axes_and_figures/invert_axes.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/subplots_axes_and_figures/invert_axes.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_subplots_axes_and_figures_invert_axes.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_subplots_axes_and_figures_invert_axes.py:


===========
Invert Axes
===========

You can use decreasing axes by flipping the normal order of the axis
limits

.. GENERATED FROM PYTHON SOURCE LINES 9-26



.. image-sg:: /gallery/subplots_axes_and_figures/images/sphx_glr_invert_axes_001.png
   :alt: Should be growing...
   :srcset: /gallery/subplots_axes_and_figures/images/sphx_glr_invert_axes_001.png, /gallery/subplots_axes_and_figures/images/sphx_glr_invert_axes_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default


    import matplotlib.pyplot as plt
    import numpy as np

    t = np.arange(0.01, 5.0, 0.01)
    s = np.exp(-t)

    fig, ax = plt.subplots()

    ax.plot(t, s)
    ax.set_xlim(5, 0)  # decreasing time
    ax.set_xlabel('decreasing time (s)')
    ax.set_ylabel('voltage (mV)')
    ax.set_title('Should be growing...')
    ax.grid(True)

    plt.show()


.. _sphx_glr_download_gallery_subplots_axes_and_figures_invert_axes.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: invert_axes.py <invert_axes.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: invert_axes.ipynb <invert_axes.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
